# htmx-ls

./: Cargo.toml  LICENSE  README.md  index.html  test.lua
client/nvim/: client.lua  test.lua
client/vscode/: bun.lockb  package.json  tsconfig.json
client/vscode/scripts/: e2e.sh
client/vscode/src/: extension.ts
src/: backend.rs  constants.rs  lib.rs  main.rs  utils.rs
src/htmx/attributes/: hx-boost.md  hx-confirm.md  hx-delete.md  hx-disable.md  hx-encoding.md  hx-ext.md  hx-get.md  hx-headers.md  hx-on.md  hx-patch.md  hx-post.md  hx-put.md  hx-trigger.md
src/lsp/: documents.rs
