[package]
name = "htmx-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
dashmap = "5.5.3"
tokio = {version = "1.36.0", features = ["full"]}
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-html = "0.20.0"
